--- a/composer.json
+++ b/composer.json
@@ -32,5 +32,8 @@
     },
     "require-dev": {
         "orchestra/testbench": "^8.3"
+    },
+    "require": {
+        "guzzlehttp/guzzle": "^7.5"
     }
 }
